* Removed quick.db-plus dependency

* Added and implemented better-sqlite3 and moment dependencies

* Fixed fetchMember function and added copyArrayRange function (at index.js)

* Added mute command (incomplete)

* Added database initializer and mute tasks (for auto unmute)

* Implemented regex usages

* Added duration objects (this is actually a utility)

12/21/2019 (UTC+7)